Photos to MUI change and enlist no need to click on check in out to go through

--- a/web/src/components/hostdashboard/Calendar.module.css
+++ b/web/src/components/hostdashboard/Calendar.module.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     padding: 0.75rem;
     border-radius: 1rem;
-    background: black;
+    background: transparent;
     display: flex;
     flex-direction: column;
     gap: 5%;
