--- a/web/src/components/hostdashboard/HostRevenueCards/RevenueOverview.css
+++ b/web/src/components/hostdashboard/HostRevenueCards/RevenueOverview.css
@@ -1,15 +1,14 @@
 /* General Card Styling */
 .ro-revenue-card {
-    padding: 5px; /* Adjusted padding for space */
+    padding: 5px; 
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    width: 30%;
 }
 
 .ro-revenue-card:hover {
-    transform: translateY(-5px); /* Lift effect on hover */
+    transform: translateY(-5px);
     box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.2);
 }
 
@@ -21,7 +20,7 @@
     font-weight: 300;
 }
 
-/* Value Styling */
+
 .ro-revenue-value {
     font-size: 2rem;
     margin-bottom: 20px;
@@ -31,14 +30,14 @@
 /* Grid for Revenue Overview Cards */
 .ro-card-grid {
     display: Flex;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive grid */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
     gap: 20px;
     justify-items: center;
     padding: 20px;
     width: 100%;
 }
 
-/* Responsive Design */
+
 @media (max-width: 768px) {
     .ro-revenue-card {
         max-width: 100%;
