--- a/web/src/components/guestdashboard/paymentsguestdashboard.css
+++ b/web/src/components/guestdashboard/paymentsguestdashboard.css
@@ -1,3 +1,7 @@
+.page-body {
+    margin-bottom: 5rem;
+}
+
 .bookingContent {
     margin-left: 20px;
     margin-right: 20px;
@@ -37,6 +41,11 @@
     padding: 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
+}
+
+.table-wrapper {
+    width: 100%;
+    height: 100%;
 }
 
 .bookings-table {
@@ -312,7 +321,9 @@
 }
 
 @media (max-width: 320px) {
-    .bookingContent {
+    .page-body {
+        overflow: hidden;
+        width: 100%;
     }
 
     .bookingContentHeader {
@@ -320,9 +331,15 @@
         gap: 10px;
     }
 
+    .table-wrapper {
+        max-width: 100vw;
+        width: 90%;
+        height: 100%;
+        overflow-x: auto;
+    }
+
     .bookings-table {
-        width: 100%;
-        overflow: auto;
+
     }
 
     .popup-content {
