--- a/web/src/components/guestdashboard/paymentsguestdashboard.css
+++ b/web/src/components/guestdashboard/paymentsguestdashboard.css
@@ -188,6 +188,16 @@
 }
 
 @media (min-width: 769px) and (max-width: 1025px) {
+    .bookingContentHeader {
+        gap: 15.5rem;
+    }
+
+    .table-wrapper {
+        width: 100%;
+        height: 100%;
+        justify-items: center;
+    }
+
     .popup-content {
         width: 90%;
         padding: 20px;
@@ -210,6 +220,16 @@
 }
 
 @media (min-width: 481px) and (max-width: 769px) {
+    .bookingContentHeader {
+        gap: 17rem;
+    }
+
+    .table-wrapper {
+        width: 100%;
+        height: 100%;
+        justify-items: center;
+    }
+
     .popup-content {
         width: 95%;
         padding: 15px;
@@ -236,9 +256,28 @@
 }
 
 @media (min-width: 426px) and (max-width: 481px) {
+
+    .page-body {
+        overflow: hidden;
+        width: 100%;
+    }
+
+    .bookingContentHeader {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .table-wrapper {
+        max-width: 100vw;
+        width: 90%;
+        height: 100%;
+        overflow-x: auto;
+    }
+
     .popup-content {
         width: 90%;
         padding: 12px;
+        justify-items: center;
     }
 
     .popup-content h3 {
@@ -259,6 +298,7 @@
     .popup-content table {
         overflow-x: auto;
         display: block;
+        width: 100%;
     }
 
     .popup-content .close-button {
@@ -267,9 +307,27 @@
 }
 
 @media (min-width: 376px) and (max-width: 426px) {
+    .page-body {
+        overflow: hidden;
+        width: 100%;
+    }
+
+    .bookingContentHeader {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .table-wrapper {
+        max-width: 100vw;
+        width: 90%;
+        height: 100%;
+        overflow-x: auto;
+    }
+
     .popup-content {
-        width: 85%;
+        width: 80%;
         padding: 12px;
+        justify-items: center;
     }
 
     .popup-content h3 {
@@ -294,9 +352,27 @@
 }
 
 @media (min-width: 321px) and (max-width: 376px) {
+    .page-body {
+        overflow: hidden;
+        width: 100%;
+    }
+
+    .bookingContentHeader {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .table-wrapper {
+        max-width: 100vw;
+        width: 90%;
+        height: 100%;
+        overflow-x: auto;
+    }
+
     .popup-content {
         width: 80%;
         padding: 10px;
+        justify-items: center;
     }
 
     .popup-content h3 {
@@ -328,7 +404,7 @@
 
     .bookingContentHeader {
         flex-direction: column;
-        gap: 10px;
+        gap: 1rem;
     }
 
     .table-wrapper {
