--- a/web/src/features/hostaiagent/hostchatbot.css
+++ b/web/src/features/hostaiagent/hostchatbot.css
@@ -1,5 +1,5 @@
-@import "~slick-carousel/slick/slick.css";
-@import "~slick-carousel/slick/slick-theme.css";
+@import  "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
 
 .hostchatbot-toggle-button {
   position: fixed;
