quickfix css in homepage

--- a/web/src/pages/home/homePage.css
+++ b/web/src/pages/home/homePage.css
@@ -236,6 +236,7 @@ body.hide-header .app-header {
 
   .domits-accommodationGroup {
     padding-left: 0vh;
+    flex-direction: column;
 }
 
   .domits-trendingContainer {
