--- a/web/src/features/bookingengine/paymentconfirmpage.css
+++ b/web/src/features/bookingengine/paymentconfirmpage.css
@@ -1,4 +1,4 @@
-.PaymentOverview{
+/* .PaymentOverview{
     display: flex;
     flex-direction: row;
 
@@ -31,4 +31,69 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+} */
+
+
+.confirmInformation {
+    background-color: #4CAF50;
+    color: white;
+    padding: 15px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.confirmInformation h3{
+    padding-left: 0px;
+}
+
+.right{
+    width: 8vh;
+}
+
+.resend-confirmation {
+    color: #4CAF50;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.priceContainer {
+    border: 2px solid black;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.priceContainer h3{
+    padding-left: 0px;
+}
+
+.price-breakdown .row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.total-price {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.view-booking-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    align-self: auto;
+}
+.view-booking-button button{
+    align-self: auto;
 }
