--- a/web/src/components/base/FilterModal.css
+++ b/web/src/components/base/FilterModal.css
@@ -22,6 +22,30 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   position: relative;
 }
+.modal-footer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #f4f4f4;
+  border-top: 1px solid #ddd;
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+}
+
+.close-menu-btn {
+  background-color: #f44336; /* Rood voor de sluitknop */
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.close-menu-btn:hover {
+  background-color: #d32f2f;
+}
 
 .modal-content h2 {
   margin-top: 0;
@@ -155,9 +179,6 @@ cursor: pointer;
 font-size: 16px;
 color: #333;
 }
-
-
-
 
 @media (max-width: 768px) {
   .modal-content {
