--- a/web/src/pages/home/Accommodations.css
+++ b/web/src/pages/home/Accommodations.css
@@ -1,5 +1,22 @@
+#container {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+#filters-sidebar {
+  flex: 0 0 250px; /* Adjust the width as needed */
+  margin-right: 20px;
+}
+
 #card-visibility {
-  padding-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+  justify-content: center;
+  flex: 1;
 }
 
 .full-visibility {
@@ -7,16 +24,13 @@
 }
 
 .accocard {
-  width: 18%;
-  margin: 1%;
-  margin-top: 10px;
-  background-color: #fff;
-  overflow: hidden;
-  display: inline-block;
-  vertical-align: top;
-  transition: all 0.5s ease-in-out;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: relative;
-  z-index: 1;
+  /* left: 0rem; */
 }
 
 .accocard:hover {
@@ -32,7 +46,6 @@
   display: block;
   transition: transform 0.4s ease-in-out;
 }
-
 .accocard:hover img {
   transform: scale(1.05);
 }
