voor afsluiten commit

--- a/web/src/features/hostdashboard/components/Calender/Calendar.module.scss
+++ b/web/src/features/hostdashboard/components/Calender/Calendar.module.scss
@@ -5,16 +5,17 @@ $breakpoint-xl: 1200px;
 
 @mixin respond-to($breakpoint) {
     @if $breakpoint == sm {
-      @media (max-width: $breakpoint-sm) { @content; }
+        @media (max-width: $breakpoint-sm) { @content; }
     } @else if $breakpoint == md {
-      @media (max-width: $breakpoint-md) { @content; }
+        @media (max-width: $breakpoint-md) { @content; }
     } @else if $breakpoint == lg {
-      @media (max-width: $breakpoint-lg) { @content; }
+        @media (max-width: $breakpoint-lg) { @content; }
     } @else if $breakpoint == xl {
-      @media (max-width: $breakpoint-xl) { @content; }
+        @media (max-width: $breakpoint-xl) { @content; }
     }
 }
 
-// .calendar {
+.calendar {
+    display: flex;
     
-// }
+}
