--- a/web/src/features/hostdashboard/hostmessages/styles/hostContactList.css
+++ b/web/src/features/hostdashboard/hostmessages/styles/hostContactList.css
@@ -21,6 +21,7 @@
     width: 6px;
     opacity: 0;
 }
+
 .contact-list-loading-container {
     display: flex;
     justify-content: center;
@@ -97,7 +98,9 @@
     max-width: 100%;
     white-space: normal;
 }
-
+.contact-item-text-container{
+    margin-right: 1em;
+}
 .contact-item-profile-image {
     width: 40px;
     height: 40px;
@@ -111,6 +114,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.contact-item-buttons-container {
+    display: flex;
+    gap: 10px;
 }
 
 .reject-button {
@@ -135,22 +143,25 @@
     font-size: 14px;
     font-weight: 600;
     transition: background-color 0.2s;
-}   
+}
+
 .contact-list-toggle {
-    position: sticky; 
+    position: sticky;
     top: 0;
     background-color: white;
-    z-index: 10; 
+    z-index: 10;
     padding: 10px;
     padding-right: 1rem;
-    border-bottom: 1px solid #dee2e6; 
+    border-bottom: 1px solid #dee2e6;
     display: flex;
-    justify-content: space-evenly; /* Spaces buttons evenly */
-    align-items: center; 
+    justify-content: space-evenly;
+    /* Spaces buttons evenly */
+    align-items: center;
 }
+
 .contact-list-toggle button {
     background-color: white;
-    color: var(--secondary-color); 
+    color: var(--secondary-color);
     border: 1px solid var(--secondary-color);
     padding: 10px 20px;
     border-radius: 5%;
@@ -161,6 +172,6 @@
 }
 
 .contact-list-toggle button.active {
-    background-color: var(--secondary-color); 
-    color: white; 
+    background-color: var(--secondary-color);
+    color: white;
 }
