--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -105,6 +105,7 @@
     background: var(--primary-color);
     border: none;
     box-shadow: none;
+    cursor: pointer;
 }
 
 .dropdownRegisterButton, .dropdownLogoutButton {
@@ -112,9 +113,11 @@
     background-color: var(--secondary-color);
     border: none;
     box-shadow: none;
+    cursor: pointer;
 }
 
 .dropdownLogoutButton {
+    cursor: pointer;
     margin-top: 20px;
 }
 
